# aliyu_my_xarm6_app

./: README.md  package.xml  requirements.txt  setup.py
launch/: move_llm.launch.py
my_xarm6_app/llm/: llm_command_node.py  llm_task_node.py  ollama_client.py  test_ollama.py
my_xarm6_app/motion/: move_to_pose.py  move_to_position_llm.py  pick_place.py  pick_place_vision.py  pick_place_vision_llm.py  test_ik.py
my_xarm6_app/vision/: color_detection.py  object_position.py  object_position_server.py
