<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_xarm6_app</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="ros.master.ai@gmail.com">fra</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>tf2_ros</depend>
  <depend>tf_transformations</depend>
  <depend>gazebo_msgs</depend>
  <depend>gazebo_ros</depend>
  <depend>linkattacher_msgs</depend>
  <depend>ros2_linkattacher</depend>
  <depend>pcl_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>my_xarm6_interfaces</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>moveit_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>python3-requests</exec_depend>


  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>


  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>



  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
